# PAC

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: __init__.py  logging_config.py  settings.py
extraction/: __init__.py  pdf_extractor.py
mcp/: README.md  pyproject.toml  server.py
policies/crm/: counterparty-limits.json  credit-assessment.json
policies/erm/: risk-appetite.json  risk-assessment.json
policies/mrm/: model-documentation.json  model-monitoring.json  model-validation.json
policies/schemas/: policy_schema.json
presentation/: index.html
src/: __init__.py  main.py
src/api/v1/: router.py
src/api/v1/endpoints/: bulk.py  evaluation.py  health.py  policies.py
src/core/engine/: __init__.py  context.py  operators.py  rule_engine.py
src/core/policy/: __init__.py  loader.py  validator.py
src/domain/crm/: __init__.py
src/domain/erm/: __init__.py
src/domain/mrm/: __init__.py
src/models/: __init__.py  database.py  policy.py
src/services/: __init__.py  evaluation_service.py  policy_service.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_operators.py  test_policy_loader.py  test_rule_engine.py
ui/: angular.json  package-lock.json  package.json
ui/src/: index.html  styles.scss
ui/src/app/: app.routes.ts  app.ts
ui/src/app/components/bulk-evaluation/: bulk-evaluation.component.ts
ui/src/app/components/confirm-dialog/: confirm-dialog.component.ts
ui/src/app/components/dashboard/: dashboard.component.ts
ui/src/app/components/evaluation-history/: evaluation-history.component.ts
ui/src/app/components/evaluation-result/: evaluation-result.component.ts
ui/src/app/models/: policy.model.ts
ui/src/app/services/: api.service.ts
(+4 files in other folders)
